tests/equals/equals.exp
Error ------------------------------------------------------------ equals.js:7:2

Cannot compare number to string.


Error ------------------------------------------------------------ equals.js:8:2

Cannot compare string to number.



Found 2 errors
